<resources>
    <string name="app_name">Book Tracker</string>
    <string name="placeholder">Text</string>
    <string name="menu_item_add">Add Book</string>
    <string name="menu_item_sort_title">Sort by Title</string>
    <string name="menu_item_sort_author">Sort by Author</string>
    <string name="menu_item_sort_read">Sort by Read Status</string>
    <string name="menu_item_delete_all">Delete All Books</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_about_title">BookTracker by Madison Inman</string>
    <string name="menu_item_about_msg">The developer would like to thank Google for providing access to their Google Books API.\n\nFor more information on the API, please refer to https://developers.google.com/books\n\nUse of this data does not constitute endorsement of this app or the developer by Google.</string>
    <string name="no_input_toast">Please enter a search term</string>
    <string name="no_network_toast">No network connection</string>
    <string name="no_results_title">No Results</string>
    <string name="no_results_msg">Please try a different search</string>
    <string name="unknown">UNKNOWN</string>
    <string name="book_cover_descr">book cover</string>
    <string name="want_to_read">Want to Read</string>
    <string name="read">Read</string>
    <string name="preview_button">View Preview</string>
    <string name="search_hint">Search by title or author</string>
    <string name="search">Search</string>
    <string name="intent_purpose_key">purpose</string>
    <string name="intent_key_book_id">book id</string>
    <string name="no_url_title">No URL</string>
    <string name="no_url_msg">No URL available</string>
    <string name="intent_purpose_view_book">View</string>
    <string name="sort_title">title</string>
    <string name="sort_author">author</string>
    <string name="sort_read">read</string>
    <string name="intent_purpose_add_book">Add</string>
    <string name="delete_dialog_title">Confirm delete</string>
    <string name="delete_all_msg">Are you sure you want to delete all books?</string>
    <string name="delete_dialog_msg">Are you sure you want to delete \"</string>
</resources>