<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_add"
        android:title="@string/menu_item_add"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_sort_title"
        android:title="@string/menu_item_sort_title" />
    <item android:id="@+id/menu_item_sort_author"
        android:title="@string/menu_item_sort_author" />
    <item android:id="@+id/menu_item_sort_read"
        android:title="@string/menu_item_sort_read" />
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/menu_item_delete_all" />
    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about" />
</menu>